# lane-detection

./: .gitignore  CMakeLists.txt  README.md  lane_detection copy.py  lane_detection.py  lane_detection.py.bk2  lane_detection2.py.bk  lane_tracking.py  particle_filter.py
include/: canny.h  capture.h  custom_exception.h  custom_types.h  edge_features.h  filters.h  image_processor.h  lane_detection.h
include/image/: canny.h  capture.h  filter.h  hough.h
lane-detection/: CMakeLists.txt  Failed_apply.ipynb  README.md  lane_detection3.py  my_lane_detection.ipynb
lane-detection/data/video/: Untitled.ipynb
lane-detection/include/: greet.h
lane-detection/src/python/: greet.py
models/: annotation_paths.txt  image_paths.txt  main.ipynb
src/: capture.cc  custom_exception.cc  edge_features.cc  filters.cc  lane-detect.py  lane_detect.py  main.cc
src/cpp/: custom_exception.cc  greet.cc  image_processor.cc  lane_detection.cc  main.cc  opencv_test.cc
src/image/: canny.cc  capture.cc  filter.cc  hough.cc
src/python/: hough.py
tests/: bench.cc  results.py  unit_test.cc
